Add additional exception handling